--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "acquisitions",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "imports": {
     "#src/*": "./src/*",
     "#config/*": "./src/config/*",
@@ -15,26 +15,25 @@
     "#validations/*": "./src/validations/*"
   },
   "scripts": {
-    "start": "node src/index.ts",
-    "dev": "node --watch src/index.ts",
-    "test": ""
+    "start": "node src/index.js",
+    "dev": "node --watch src/index.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Blue-Onion/Mozaik"
+    "url": "git+https://github.com/Blue-Onion/Mozaik.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "bugs": {
-    "url": "https://github.com/adrianhajdin/acquisitions/issues"
+    "url": "https://github.com/Blue-Onion/Mozaik/issues"
   },
-  "homepage": "https://github.com/adrianhajdin/acquisitions#readme",
+  "homepage": "https://github.com/Blue-Onion/Mozaik#readme",
   "dependencies": {
-    "@arcjet/inspect": "^1.0.0-beta.11",
-    "@arcjet/node": "^1.0.0-beta.11",
     "@neondatabase/serverless": "^1.0.1",
+    "@prisma/client": "^6.19.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -48,8 +47,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
-    "@types/express": "^5.0.5",
-    "@types/node": "^24.10.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
@@ -57,8 +54,6 @@
     "jest": "^30.1.3",
     "prettier": "^3.6.2",
     "prisma": "^6.19.0",
-    "supertest": "^7.1.4",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "supertest": "^7.1.4"
   }
 }
