feat: enhance authentication and validation logic
- Added a new import alias for the lib directory in package.json.
- Updated JWT_SECRET handling in auth.service.js to ensure it is set as an environment variable, throwing an error if not.
- Modified the registerSchema in auth.validation.js to make the name field optional while retaining the maximum character limit.

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "imports": {
     "#src/*": "./src/*",
     "#config/*": "./src/config/*",
+    "#lib/*": "./src/lib/*",
     "#controllers/*": "./src/controllers/*",
     "#middleware/*": "./src/middleware/*",
     "#models/*": "./src/models/*",
