feat: integrate Google Generative AI for code generation and enhance project routes
- Added dependencies for Google Generative AI in package.json and package-lock.json.
- Implemented a new route for generating Manim code based on project prompts in code.route.js.
- Created a controller to handle code generation logic, including error handling and API integration in code.controller.js.
- Updated app.js to include the new prompt route for handling code generation requests.
- Enhanced code service to interact with Google Generative AI, including retry logic for API calls in code.service.js.

--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,8 @@
   },
   "homepage": "https://github.com/Blue-Onion/Mozaik#readme",
   "dependencies": {
+    "@google/genai": "^1.30.0",
+    "@google/generative-ai": "^0.24.1",
     "@neondatabase/serverless": "^1.0.1",
     "@prisma/client": "^6.19.0",
     "bcrypt": "^6.0.0",
